bk_ida/gccida/g1/expand_mult
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2809:19: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  expand_mult( machine_mode mode, rtx op0, rtx op1, rtx target, int unsignedp) 
                  ^
                  enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2811:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v5; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2827:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2828:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2836:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v32; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2840:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v36; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2844:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2848:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v44; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v48; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2856:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v52; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2858:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v54; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2860:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v56; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2862:13: error: expected expression
expand_mult::$15A4585A4BD47F0CBB7A268DC7D7DA95 variant; // [rsp+14h] [rbp-2E4h] 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2871:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[*( ( unsigned __int8 *)op1 + 2)] != MODE_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2904:1: error: use of undeclared identifier 'variant'
variant = basic_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2904:11: error: use of undeclared identifier 'basic_variant'
variant = basic_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2911:1: error: use of undeclared identifier 'variant'
variant = basic_variant; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2911:11: error: use of undeclared identifier 'basic_variant'
variant = basic_variant; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/expmed.c:2916:1: error: use of undeclared identifier 'variant'
variant = negate_variant; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/expand_mult/src/obj/expmed.o] Error 1
